--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "freestyle",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/tomatillodesign/freestyle-landing-page",
+  "homepage": "https://tomatillodesign.github.io/freestyle-landing-page/",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
